cambia disposcion y nombre de los materiales criptograficos

--- a/applications/block-consumer/conf/application.conf
+++ b/applications/block-consumer/conf/application.conf
@@ -45,13 +45,14 @@ fabric.yaml.conf = /conf/fabric.client.yaml
 # El certificado debe ser emitido por la CA para MSP de la organizacion indicada en el archivo de configuracion ${fabric.yaml.conf} en client: organization:
 fabric.auth.type = fs
 fabric.auth.appuser.name = block-consumer
-# Clave Privada para MSP
-fabric.auth.appuser.keystore.path = /conf/msp/userN.orgX.msp-pk.pem
-# Certificado para MSP
-fabric.auth.appuser.certsign.path = /conf/msp/userN.orgX.msp-cert.pem
 
-#fabric.tls.auth.appuser.keystore.path = /conf/store/local/orgX/UserX.OrgX.tls-pk.pem
-#fabric.tls.auth.appuser.certsign.path = /conf/store/local/orgX/UserX.OrgX.tls-cert.pem
+# Clave Privada y cerificado para MSP
+fabric.auth.appuser.keystore.path = /conf/store/msp/userN.orgX.msp-pk.pem
+fabric.auth.appuser.certsign.path = /conf/store/msp/userN.orgX.msp-cert.pem
+
+# Clave Privada y cerificado para TLS
+#fabric.tls.auth.appuser.keystore.path = /conf/store/tls/userN.orgX.tls-pk.pem
+#fabric.tls.auth.appuser.certsign.path = /conf/store/tls/userN.orgX.tls-cert.pem
 
 certificate.check.restrict = false
 
