actualizacion de doc para hlf-proxy 1.4.2 y blockconsumer 1.4.0

--- a/applications/block-consumer/conf/application.conf
+++ b/applications/block-consumer/conf/application.conf
@@ -1,10 +1,13 @@
-# DB 
+# DB
 # Oracle
 # url      => jdbc:oracle:thin:@//<host>:<port>/<service_name>
-db.hlf.url = "jdbc:oracle:thin:@xxx.xxx.xxx.xxx:1521:blchain"
+db.hlf.url = "jdbc:oracle:thin:@xxx.xxx.xxx.xxx:1521:SID"
 # Postgres
 # url        => jdbc:postgresql://host:port/database
 # db.hlf.url = "jdbc:postgresql://localhost:5432/hlf_db"
+# SQLServer
+# url        => jdbc:jtds:sqlserver://host:port:database
+# db.hlf.url = "jdbc:jtds:sqlserver://localhost:1433:hlf_db"
 
 # Usuario con que se conecta la aplicacion
 db.hlf.user = bc_app
@@ -70,6 +73,15 @@ databases {
   #################################
   postgresql {
     dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
+    connectionTestQuery = SELECT 1
+  }
+
+  ###############################################################################################
+  # sqlserver
+  # url => jdbc:jtds:sqlserver://host:port/database
+  ###############################################################################################
+  jtds {
+    driverClassName = net.sourceforge.jtds.jdbc.Driver
     connectionTestQuery = SELECT 1
   }
 }
