Se agregan nuevas propiedades soportadas por la nueva version v2

--- a/applications/block-consumer/application.conf
+++ b/applications/block-consumer/application.conf
@@ -22,6 +22,7 @@ db_hlf.schema = hlf
 # Para Postgres debe quedar seteado con "".
 db_hlf.package = bc_pkg
 #db_hlf.package = ""
+#db_hlf.package_verify=false
 
 # Puerto para monitoreo
 application.port = 8084
@@ -29,6 +30,12 @@ application.port = 8084
 # FABRIC conf
 # Nombre del peer preferido
 fabric.preferred.peer = peer0.xxx.com
+
+# Chaincode del cual se requiere registrar información. Se define utilizando una expresión regular. Por default se consumen transacciones de cualquier Chaincode
+#fabric.chaincode.namespace.filter=."*"
+
+# Nombre de la funcion que se requiere inspeccionar para registrar información. Se define utilizando una expresión regular. Por default se consumen transacciones generadas a cualquier invocación de función
+#fabric.chaincode.fname.filter=."*"
 
 # Regexp para filtrar nombres de peers alternativos al preferido
 # Cuando el preferido no responde o esta mas atrasado que fabric.switch.blocks.threshold
@@ -58,6 +65,14 @@ fabric.tls.auth.appuser.keystore.path=/conf/crypto/client/blockconsumer"@"blockc
 fabric.tls.auth.appuser.certsign.path=/conf/crypto/client/blockconsumer"@"blockchain-tributaria.afip.gob.ar-tls-client.crt
 
 certificate.check.restrict=false
+
+business {
+  # Lista de expresiones regulares utilizadas por la aplicación para excluir del registro los datos consumidos.
+  # El objetivo de esta propiedad es reducir el espacio requerido en la base de datos relacional y aumentar la velocidad de consumo excluyendo datos no requeridos
+  # por el cliente.
+  # Se pueden definir multiples expresiones regulares para evaluar cada calve persistida en Hyperledger Fabric. ej:  ["^(?!(AR|BR))(.*)$","^(.+)(?<!.*(IM|EX))$"]
+  # exclusionKeys = []
+}
 
 databases {
   #################################
